--- a/README
+++ b/README
@@ -1,7 +1,3 @@
-Great! Here’s the updated README for your backend repository with the details you provided:
-
----
-
 ## LOST_FOUND_SERVER
 
 Welcome to the LOST_FOUND_SERVER repository. This is the backend server for the Lost & Found web application, built using Node.js and Express.
@@ -14,6 +10,7 @@ Welcome to the LOST_FOUND_SERVER repository. This is the backend server for the 
 - [Running the Server](#running-the-server)
 - [API Endpoints](#api-endpoints)
 - [Dev Dependencies](#dev-dependencies)
+- [Deployment](#deployment)
 - [Contributing](#contributing)
 - [License](#license)
 
@@ -99,6 +96,10 @@ Here are some of the main API endpoints provided by this server:
 - `start`: `node ./src/index.js`
 - `dev`: `nodemon ./src/index.js`
 
+### Deployment
+
+This server is deployed online using the Render platform. You can access the dashboard and manage the deployment at [Render](https://dashboard.render.com/).
+
 ### Contributing
 
 We welcome contributions! Please follow these steps to contribute:
@@ -111,8 +112,4 @@ We welcome contributions! Please follow these steps to contribute:
 
 ### License
 
-This project is licensed under the MIT License. See the [LICENSE](https://github.com/WebProject720?tab=repositories) file for more details.
-
----
-
-Feel free to let me know if you need any more details or changes!
+This project is licensed under the MIT License. See the [LICENSE](LICENSE) file for more details.
